# Some-tools...

./: README.md
comment-crawler/: README.md  comment_crawler.py  comment_crawler_config.example.json  sample_comments.html
windows-motion-studio/: .gitignore  ADAPTERS.md  LICENSE  README.md  build.ps1  pyproject.toml
windows-motion-studio/scripts/: generate_icon.py
windows-motion-studio/src/windows_motion_studio/: __main__.py  app.py  models.py  motion_engine.py  profile_store.py  scanner.py  system_tweaks.py
